11-4-24 // 1:23pm
    I created an initialization function in the registers.h function that creates all the regesters as NULL. 